public/css/app.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Mona+Sans:ital,wdth,wght@0,100.1,200..900;1,100.1,200..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');

:root { 
  --main-color: #2A292F;
  --background: #DEDBC9;
  --text: black;
  --second-color: #f48500;
}

html {
  width: 100%;
  height: 100%;
}

body {
  font-family: "Mona Sans","Libre Baskerville",Helvetica,serif;
  height: 100%;
  
  background-color: var(--background);
  display: flex;
  flex-direction: column;
}

main {
  flex: 1;
}

.rectangle-div {
  background-color: var(--main-color);
  padding: 20px;
  color: white;
  border-radius: 20px;
}


#my-balance,
#my-transactions { 
  margin: 0 20px;
}

#my-balance h1,
#my-transactions h1{
  font-size: 3.5rem;
  font-weight: 400;
}

#my-balance h2,
#my-transactions h2{
  font-size: 2.5rem;
  font-weight: 400;
}

#my-balance,
.faq-div {
  background-color: var(--main-color);
  color: white;
  border-radius: 20px;
}


.footer {
 
  border-top: 1px solid #ccc;
  color: white;
  width: 100%;
  background-color: var(--main-color);
  margin-top: 20px;
}

.footer .container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;

}

.footer a {
  color: white;
  text-decoration: none;
}

.footer a:hover {
  text-decoration: underline;

}

.header-container {

  padding: 30px 70px 0 70px;
  width: 100%;
  border-radius: 10px;
  height: 100px;

}

.header-info {
  font-family: "Libre Baskerville";
  font-size: 1.7rem;
  font-weight: 600;
  display: flex;
  justify-content: center; /* Center the elements */
  align-items: center;
  gap: 200px; /* Add spacing between sections */
  position: relative; /* Allows positioning of the left and right sections */
}

.header-info .left-about {
  position: absolute;
  left: 0; /* Align the left section to the start */
}

.header-info .about {
  position: absolute;
  right: 0; /* Align the right section to the end */
}

.left-about { 
  display: flex;
  gap: 20px;
}

.left-about span,
#balance{ 
  color: var(--text);
  position: relative;
  transition-timing-function: cubic-bezier(0.25,0.8,0.25,1);
  transition-duration: 400ms;
  transition-property: color;
}

.left-about span:hover,
#balance:hover {
  color: black;
}

.left-about span:hover:after,
#balance:hover:after { 
  width: 100%;
  left: 0;
}

.left-about span:after,
 #balance:after{ 
  content: "";
  pointer-events: none;
  bottom: -2px;
  left: 50%;
  position: absolute;
  width: 0%;
  height: 2px;
  background-color: black;
  transition-timing-function: cubic-bezier(0.25,0.8,0.25,1);
  transition-duration: 400ms;
  transition-property: width,left;
}

.left-about #service {
  position: relative;
  top: 1px;
  display: flex;
  align-self: center;
}

.logo a {
  text-align: center;

}

.header-info .logo {
  margin: 0 auto;
  position: relative;
  font-size: 3rem;
  font-weight: 700;
 
  color: var(--text);
}

.submit-button { 
  color: var(--text);
}

.header-info .about{ 
  display: flex;
  align-items: center;
  gap: 20px;
  overflow: visible;
}


.header-info .about a { 
  color: black;
}

.header-border {
  width: 100%; 
  border: none;
  background: linear-gradient(to bottom, black 1px, transparent 1px);
  height: 1px;
  margin-bottom: 30px;
}

/* .select-wrapper 
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 1px;
  padding-left: 5px;
  background-color: var(--main-color);
  border-radius: 10px;
  width: 60px;
  height: 50px;
  overflow: hidden; 
} */

.dropdown-wrapper {
  position: relative;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 1px;
  padding-left: 5px;
  background-color: var(--main-color);
  border-radius: 10px;
  
  width: 60px;
  height: 50px;
   
}

.dropdown-toggle {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.dropdown-menu {
  position: absolute;
  top: 50px; 
  right: 0;
  background-color: #1a1a1a;
  border-radius: 8px;
  border-top-right-radius: 0;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
  display: none; /* Hidden by default */
  z-index: 1000;
  list-style: none;
  padding: 10px 0;
  min-width: 150px;
}

.dropdown-menu li {
  padding: 0px 20px;
  text-align: left;
}

.dropdown-menu li:hover {
  background-color: #333;
}

.dropdown-menu a, 
.logout-link {
  text-decoration: none;
  color: white;
  font-size: 14px;
  display: block;
  cursor: pointer;
}

.header-container, .about {
  overflow: visible; 
}


.dropdown-menu li {
  padding: 10px 20px;
  text-align: left;
}

.dropdown-menu li:hover {
  background-color: #333;
}

.dropdown-menu li #drop-a, 
.logout-link {
  text-decoration: none;
  color: white;
  font-size: 14px;
  display: block;
  cursor: pointer;
}




.cards-container {
  display: flex;
  flex-direction: column;
  gap: 20px;
}
.all-cards {
  flex:1;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
  border-radius: 10px;
}


.search-container {
  position: relative;
  width: 100%;
}

.search-container input {
  cursor: text;
  background-color: var(--main-color);
  border: 1.5px solid #424242; /* Set initial border */
  border-radius: 15px;
  color: white;
  font-size: 1.5rem;
  padding: 10px;
  padding-left: 55px;
  margin-bottom: 0;
  width: 45%;
  height: 50px;
  box-shadow: 0px 0px 20px -18px;
  transition: border 0.1s ease,box-shadow 0.2s ease; /* Ensure border property is included in the transition */
}

.search-container form {
  margin: 0;
}


.search-container input:focus {
  border: 1px solid #424242;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.search-container input::placeholder {
  color: white
  
}

.search-container .search-icon {
  position: absolute;
  color: #424242;
  top: 13px;
  left: 15px;
}
label {
  font-weight: normal;
}
/* ... */

